// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button Group component should align to the right 1`] = `
<div
  className="buttons is-right"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 0
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 1
  </button>
</div>
`;

exports[`Button component Button Group component should be a default list of buttons 1`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 0
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 1
  </button>
</div>
`;

exports[`Button component Button Group component should be centered 1`] = `
<div
  className="buttons is-centered"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 0
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 1
  </button>
</div>
`;

exports[`Button component Button Group component should concat class names in props with Bulma class name 1`] = `
<div
  className="buttons super-class-1 dope-class-2"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 0
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 1
  </button>
</div>
`;

exports[`Button component Button Group component should group buttons together 1`] = `
<div
  className="buttons has-addons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 1
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
  >
    test 2
  </button>
</div>
`;

exports[`Button component should be a Large Primary Button 1`] = `
<button
  className="button is-primary is-large"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
/>
`;

exports[`Button component should be a Primary Button 1`] = `
<button
  className="button is-primary"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
/>
`;

exports[`Button component should be a default Button 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
/>
`;

exports[`Button component should be a reset form button 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="reset"
/>
`;

exports[`Button component should be a submit form button 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="submit"
/>
`;

exports[`Button component should be an anchor button 1`] = `
<a
  className="button"
  disabled={false}
  href="https://github.com/dfee/rbx"
  onClick={[Function]}
  tabIndex={0}
/>
`;

exports[`Button component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Group": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "div",
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "as": "button",
    "disabled": false,
    "fullwidth": false,
    "inverted": false,
    "isSelected": false,
    "isStatic": false,
    "loading": false,
    "onClick": [Function],
    "outlined": false,
    "remove": false,
    "reset": false,
    "rounded": false,
    "submit": false,
    "text": false,
  },
  "render": [Function],
}
`;

exports[`Button component should expose Button Group 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
  },
  "render": [Function],
}
`;

exports[`Button component should render as a React element link with to prop 1`] = `
<a
  href="http://google.com"
>
  TEST
</a>
`;

exports[`Button component should render as a html button 1`] = `
<button
  className="button is-danger"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
/>
`;

exports[`Button component should render as a static Button 1`] = `
<span
  className="button is-primary is-static"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
/>
`;

exports[`Button component should render be disabled 1`] = `
<button
  className="button"
  disabled={true}
  tabIndex={-1}
/>
`;
